[package]
name = "runner"
version = "0.1.0"
edition = "2018"

[dependencies]
runner-macros = { version = "0.1.0", path = "../runner-macros" }

actix = "=0.11.0-beta.2"
actix_derive = "=0.6.0-beta.1"
actix-web = { version = "4.0.0-beta.6", features = [ "openssl" ] }
anyhow = "1.0.43"
chrono = "0.4.19"
dirs = "3.0.2"
hex = "0.4.2"
portpicker = "0.1.1"
rand = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
futures = "0.3.16"

nearcore = { git = "https://github.com/near/nearcore", rev = "84ae110d99d26a5638d4aaca2ddaf08d048e0920" }
near-crypto = { git = "https://github.com/near/nearcore", rev = "84ae110d99d26a5638d4aaca2ddaf08d048e0920" }
near-primitives = { git = "https://github.com/near/nearcore", rev = "84ae110d99d26a5638d4aaca2ddaf08d048e0920" }
near-jsonrpc-primitives = { git = "https://github.com/near/nearcore", rev = "84ae110d99d26a5638d4aaca2ddaf08d048e0920" }
near-jsonrpc-client = { git = "https://github.com/near/nearcore", rev = "84ae110d99d26a5638d4aaca2ddaf08d048e0920" }

near-sandbox-utils = { git = "https://github.com/near/sandbox" }
