[package]
name = "near-workspaces"
version = "0.14.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-workspaces-rs"
description = """
Library for automating workflows and testing NEAR smart contracts.
"""

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bs58 = "0.5"
cargo_metadata = { version = "0.18", optional = true }
cargo-near-build = { version = "0.1.0" }
chrono = "0.4.19"
fs2 = "0.4"
rand = "0.8.4"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
serde = "1.0"
serde_json = "1.0"
json-patch = "2.0"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
url = { version = "2.2.2", features = ["serde"] }

near-abi-client = "0.1.1"
near-gas = { version = "0.3", features = ["serde", "borsh", "schemars"] }
near-token = { version = "0.3", features = ["serde"] }
near-sdk = { version = "5.5", optional = true }
near-account-id = "1.0.0"

near-crypto = "0.26"
near-primitives = "0.26"
near-jsonrpc-primitives = "0.26"
near-jsonrpc-client = { version = "0.13", features = ["sandbox"] }
near-sandbox-utils = { git = "https://github.com/near/near-sandbox.git", branch = "sandbox-2.2.0" }
near-chain-configs = { version = "0.26", optional = true }

[build-dependencies]
near-sandbox-utils = { git = "https://github.com/near/near-sandbox.git", branch = "sandbox-2.2.0" }


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
anyhow = "1.0"
futures = "0.3"
near-sdk = "5.5"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }

[features]
default = ["install"]
install = []                          # Install the sandbox binary during compile time
interop_sdk = ["near-sdk"]
unstable = ["cargo_metadata"]
experimental = ["near-chain-configs"]

[package.metadata.docs.rs]
all-features = true
