[package]
name = "near-workspaces"
version = "0.22.4"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/near/near-workspaces-rs"
description = """
Library for automating workflows and testing NEAR smart contracts.
"""

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bs58 = "0.5"
cargo-near-build = { version = "0.11.2", optional = true }
chrono = "0.4.19"
fs2 = "0.4"
rand = "0.8.4"
reqwest = { version = "0.13", features = ["json"], default-features = false }
sha2 = "0.10"
serde = "1.0"
serde_json = "1.0"
json-patch = "2.0"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
url = { version = "2.2.2", features = ["serde"] }

near-abi-client = "0.1.1"
near-gas = { version = "0.3", features = ["serde", "borsh", "schemars"] }
near-token = { version = "0.3", features = ["serde"] }
near-sdk = { version = "5.26", optional = true }
near-account-id = "2.0.0"
# DRAFT: nearcore 2.13 (protocol v85) is not on crates.io yet. Pin the
# nearcore-versioned crates to the same 2.13-release rev that the sibling
# near-jsonrpc-client 2.13 draft pins, so all nearcore types unify (cargo
# only unifies identical git sources; a bare branch pin would clash with
# jsonrpc-client's rev pin and duplicate near-primitives).
near-crypto = { git = "https://github.com/near/nearcore", rev = "46483c8d45579dd89faa3bd47317d4c563bcde10" }
near-primitives = { git = "https://github.com/near/nearcore", rev = "46483c8d45579dd89faa3bd47317d4c563bcde10" }
near-jsonrpc-primitives = { git = "https://github.com/near/nearcore", rev = "46483c8d45579dd89faa3bd47317d4c563bcde10" }
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs", rev = "5f5d150d47315745945fba7672bf8c90c5bf7f95", features = ["sandbox"] }
near-sandbox = "0.3.9"
near-chain-configs = { git = "https://github.com/near/nearcore", rev = "46483c8d45579dd89faa3bd47317d4c563bcde10", optional = true }

[build-dependencies]
near-sandbox = "0.3.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
anyhow = "1.0"
futures = "0.3"
near-sdk = { version = "5.26", features = ["unit-testing"] }
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }

[features]
default = ["install", "rustls"]
install = []                          # Install the sandbox binary during compile time
interop_sdk = ["near-sdk"]
unstable = ["dep:cargo-near-build"]
experimental = ["near-chain-configs"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[package.metadata.docs.rs]
all-features = true
