[package]
name = "test-contract-status-message"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.25.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
